--- a/iframe001.html
+++ b/iframe001.html
@@ -18,7 +18,9 @@
     <p>Acessando o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" rel="externo" >curso em video</a> para aprender a programar</p>
 
     <p>Vou utilizar um exemplo de inframe nesse paragrafo
-        <iframe src="https://www.cursoemvideo.com/"frameborder="0" class="primeiro"></iframe>
+        <iframe src="https://www.cursoemvideo.com/"frameborder="0" class="primeiro">
+            <a href="https://www.cursoemvideo.com/">Site do curso em video</a>
+        </iframe>
     </p>
     <p>Existem sites que possuem uma proteção contra o iframe, como por exemplo o YouTube. Ao lado dessafrase tera um ifrma do YouTube como exemplo: <iframe src="https://www.youtube.com/" frameborder="0"></iframe></p>
 </body>
