--- a/teste002.html
+++ b/teste002.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iframe</title>
     <style>
+        
         iframe{
             margin-top: 60px;
             width: 90vw;
             height: 400px;
         }
+       
     </style>
 </head>
 <body>
@@ -25,5 +27,9 @@
 
 
     <iframe src="../modulo3htmlecss/exercicios/tabelas/tabela004.html" name="teste"></iframe>
+
+
+    <h1>Mapa do waze</h1>
+    <iframe src="https://embed.waze.com/iframe?zoom=16&lat=-19.975910&lon=-43.942981&ct=livemap" width="600" height="450" allowfullscreen id="waze"></iframe>
 </body>
 </html>
