--- a/media-queries/mq002/mqf.html
+++ b/media-queries/mq002/mqf.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Queries</title>
-    <link rel="stylesheet" href="estilos/geral.css" media="all">
-    <link rel="stylesheet" href="estilos/retrato.css" media="screen and (orientation: portrait)">
-    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape)"> 
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/portrait.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape)">
+    <title>Media Queries e Features</title>
 </head>
 <body>
-    <h1>Testando Media Queries e Features</h1>
-    
+    <h1>Teste de Media Queries </h1>
 </body>
 </html>
