exercicio de media queries e breakpoints

--- a/media-queries/mq003/mobiliefirst.html
+++ b/media-queries/mq003/mobiliefirst.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile First</title>
+    <link rel="stylesheet" href="estilo/style.css" 
+    media="all">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img src="imagens/icon-pc.png" alt="icone pc" id="pc">
+        <img src="imagens/icon-phone.png" alt="icon telefone" id="phone">
+        <img src="imagens/icon-print.png" alt="icon impressora" id="print">
+        <img src="imagens/icon-tablet.png" alt="icon tablet" id="tablet">
+        <img src="imagens/icon-tv.png" alt="icon tv" id="tv">
+    </main>
+
+    <img src="imagens/back-print.jpg" alt="">
 </body>
 </html>
