--- a/media-queries/mq004/menuresponsivo.html
+++ b/media-queries/mq004/menuresponsivo.html
@@ -4,19 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
         <menu>
             <ul>
-                <li>Opção 1</li>
-                <li>Opção 2</li>
-                <li>Opção 3</li>
-                <li>Opção 4</li>
-                <li>Opção 2</li>
+                <li><a href="#">Opção 1</a></li>
+                <li><a href="#">Opção 2</a></li>
+                <li><a href="#">Opção 3</a></li>
+                <li><a href="#">Opção 4</a></li>
+                <li><a href="#">Opção 5</a></li>
             </ul>
         </menu>
     </header>
+        <main>
+            <article>
+                <h1>Testando Media Queries</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quia adipisci sit earum, porro eos assumenda fugit distinctio necessitatibus, eum laudantium corrupti, ea architecto. Id repudiandae veniam sunt laborum blanditiis!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore fugiat reiciendis quidem deserunt laborum iste autem assumenda omnis voluptates molestiae, quisquam vero labore dolorum. Sapiente eius velit aliquid! Omnis, laudantium.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam enim repellendus nobis itaque, tempora doloribus pariatur et corrupti neque sapiente nesciunt id voluptas laborum expedita, eos voluptatem facilis voluptatum perferendis.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam repellat sapiente facilis totam voluptatibus eaque quia in velit quo neque. In exercitationem placeat sed voluptatibus voluptates nesciunt molestiae necessitatibus quos.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit dolores dicta sunt fuga aut, itaque temporibus minus dignissimos optio maxime ratione, eligendi labore dolorum iusto nam earum nihil nisi laudantium!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cum nam dolorem, exercitationem quo sint ducimus delectus natus ipsam, quasi ut voluptas quaerat, ad laborum fugiat nostrum consequatur sequi. Cupiditate!
+                </p>
+            </article>
+        </main>
+    
 </body>
 </html>
