--- a/media-queries/mq004/menuresponsivo.html
+++ b/media-queries/mq004/menuresponsivo.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Query</title>
+    <title>Media Query</title>   
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        
+        <span id="burguer" class="material-icons" onclick="clickMenu()"><a href="#">menu</a></span>
+
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -34,6 +39,14 @@
                 </p>
             </article>
         </main>
-    
+        <script>
+            function clickMenu(){
+                if (itens.style.display == 'block'){
+                    itens.style.display = 'none'
+                }else{
+                    itens.style.display = 'block'
+                }
+            }
+        </script>
 </body>
 </html>
