--- a/media-queries/mq004/menuresponsivo.html
+++ b/media-queries/mq004/menuresponsivo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
         
@@ -45,6 +45,14 @@
                     itens.style.display = 'none'
                 }else{
                     itens.style.display = 'block'
+                }
+            }
+
+            function mudouTamanho(){
+                if(window.innerWidth >= 768){
+                    itens.style.display = 'block'
+                }else{
+                    itens.style.display = 'none'
                 }
             }
         </script>
